app/assets/stylesheets/widgets/home_page/hero_panel_masthead.scss
/* FuturaLTPro-LightCond */
@font-face {
  font-family: "futura-pt-light-condensed";
  src: url('https://www.chapman.edu/_files/fonts/futura_cond_light.ttf') format('truetype');
  font-weight: light;
  font-style: normal;
}

.homepage-masthead__container {
  height: 100vh;

  .homepage-masthead__toggle-play-button {
    top: 2vh;
    left: 2vh;
    height: 3rem;
    z-index: 100;
  }

  .homepage-masthead__sub-container {
    z-index: 100;

    .homepage-masthead__heading-container {
      height: 100%;
      width: 100%;

      .masthead-triangle {
        width: 0;
        height: 0;
        border-top: 125px solid transparent;
        border-right: 125px solid rgba(0, 156, 166, 0.8);
        border-bottom: 125px solid transparent;
        transform: rotate(45deg);
        position: absolute;
        top: 3%;
        left: 12%;
      }

      .homepage-masthead__tagline {
        position: absolute;
        top: 12%;
        left: 15%;

        .row-one {
          font-family: "futura-pt-light-condensed";
          font-weight: 200;
          font-size: 6.8rem;
          line-height: 6.4rem;
          text-transform: uppercase;
          color: rgba(0, 0, 0, 0.1);
          color: white;
        }

        .row-two {
          font-family: "futura-pt";
          font-weight: bold;
          font-size: 9.8rem;
          line-height: 8.8rem;
          text-transform: uppercase;
          color: white;
        }

        .row-three {
          font-family: 'futura-pt';
          font-size: 4.4rem;
          line-height: 4.4rem;
          font-weight: bold;
          margin-top: 32px;
          text-transform: uppercase;
        }
      }
    }

    .homepage-masthead__buttons-inspire {
      width: 380px;
      position: absolute;
      top: 42%;
      left: 15%;

      .button-link-inspire {
        font-family: "futura-pt";
        font-weight: bold;
        font-size: 1.6rem;
        line-height: 2rem;
        text-transform: uppercase;
        color: white;
        background-color: rgba(0, 0, 0, 0.7);
        padding-top: 18px;
        padding-bottom: 18px;
        border: 2px solid white;
        border-radius: 4px;
        text-decoration: none;
        text-align: center;
        width: 100%;
        display: block;
        margin-bottom: 10px;
      }

      .button-link-inspire:hover {
        background-color: rgba(89, 79, 81, 0.7);
      }
    }
  }

  .homepage-masthead__slant-container {
    position: relative;
    bottom: 0;
    height: 320px;
    margin-top: 400px;

    .white-slant {
      position: absolute;
      top: -10px;
      width: 100%;
      height: 100%;
      background-color: white;
      clip-path: polygon(100% 0%, 1000% 100%, 0% 100%, 0% 20%);
      z-index: 90;
    }

    .slant-background {
      position: absolute;
      width: 100%;
      height: 100%;
      background-image: url("https://www.chapman.edu/_files/img/hero-panels/masthead-inspire/inspire-triangle-patterns.jpg");
      background-size: auto;
      clip-path: polygon(100% 0%, 1000% 100%, 0% 100%, 0% 20%);
      z-index: 100;
      display: flex;
      align-items: center;
      flex-direction: column;
      justify-content: center;
    }

    p.homepage-masthead__words {
      position: relative;
      margin-left: auto;
      margin-right: auto;
      display: flex;
      text-align: center;
      justify-content: center;
      width: 762px;
      font-family: "minion-pro";
      font-weight: bold;
      font-style: italic;
      font-size: 4rem;
      line-height: 4.8rem;
      color: white;
      padding-top: 40px;
    }

    .page-down-arrow {
      color: white;
      font-size: 3rem;
    }

    .page-down-arrow:hover,
    .page-down-arrow:focus {
      font-weight: bold;
    }
  }

  video.homepage-masthead__video,
  video#homepage-masthead__video {
    // max-height: 90vh;
    mask-image: none !important;
  }
}

// MEDIA QUERIES

@media only screen and (min-width: 901px) and (max-width: 1200px) {
  .homepage-masthead__container {
    .homepage-masthead__sub-container {
      .homepage-masthead__heading-container {
        // margin-top: 0;
        // position: relative;
        // top: 0;
        // left: 10%;

        .masthead-triangle {
          // border-top: 125px solid transparent;
          // border-right: 125px solid rgba(0, 156, 166, 0.8);
          // border-bottom: 125px solid transparent;
          // position: relative;
          // top: 55px;
          left: 9%;
          // transform: rotate(45deg);
        }

        .homepage-masthead__tagline {
          // top: -105px;
          left: 13%;
          // bottom: 0;

          .row-one,
          .row-two,
          .row-three {
            display: inline-block;
            text-align: left;
            width: 100%;
          }

          .row-one {
            font-size: 6.2rem;
            line-height: 6.2rem;
          }

          .row-two {
            font-size: 7.6rem;
            line-height: 7.6rem;
          }
        }
      }

      .homepage-masthead__buttons-inspire {
        top: 38%;
        left: 12%;

        width: 340px;

        .button-link-inspire {
          font-size: 1.6rem;
          padding: 16px;
        }
      }
    }
  }
}

@media only screen and (min-width: 601px) and (max-width: 900px) {
  .homepage-masthead__container {
    .homepage-masthead__slant-container {
      height: 300px;
      .slant-background {
        p.homepage-masthead__words {
          width: 540px;
          font-size: 3.4rem;
          line-height: 3.4rem;
        }
      }
    }
    .homepage-masthead__sub-container {
      .homepage-masthead__heading-container {

        .masthead-triangle {
          left: 9%;
        }

        .homepage-masthead__tagline {
          left: 13%;

          .row-one,
          .row-two,
          .row-three {
            display: inline-block;
            text-align: left;
            width: 100%;
          }

          .row-one {
            font-size: 5.4rem;
            line-height: 5.4rem;
          }

          .row-two {
            font-size: 6.8rem;
            line-height: 6.8rem;
          }

          .row-three {
            font-size: 3.4rem;
            line-height: 3.4rem;
          }
        }
      }

      .homepage-masthead__buttons-inspire {
        top: 39%;
        left: 13%;
        width: 320px;

        .button-link-inspire {
          font-size: 1.4rem;
          padding: 14px;
        }
      }
    }
  }
}

@media only screen and (max-width: 600px) {
  .homepage-masthead__container {
    .homepage-masthead__slant-container {
      height: 240px;
      .slant-background {
        p.homepage-masthead__words {
          width: 280px;
          font-size: 2.4rem;
          line-height: 3.2rem;
        }
      }
    }

    .homepage-masthead__sub-container {
      .homepage-masthead__heading-container {
        // margin-top: 0;
        // position: relative;
        // top: 10%;

        .masthead-triangle {
          left: -1%;
          top: 10%;
          border-top: 100px solid transparent;
          border-right: 100px solid rgba(0, 156, 166, 0.8);
          border-bottom: 100px solid transparent;
        }

        .homepage-masthead__tagline {
          left: 7%;
          top: 17%;

          .row-one,
          .row-two,
          .row-three {
            display: inline-block;
            text-align: left;
            width: 100%;
          }

          .row-one {
            font-size: 4rem;
            line-height: 4rem;
          }

          .row-two {
            font-family: "futura-pt";
            font-weight: bold;
            font-size: 4.8rem;
            line-height: 4.8rem;
          }

          .row-three {
            font-size: 2.8rem;
            line-height: 2.8rem;
          }
        }
      }

      .homepage-masthead__buttons-inspire {
        // align-items: center;
        width: 90%;
        left: 5%;
        .button-link-inspire {
          font-size: 1.4rem;
          padding: 14px;
        }
      }
    }
  }
}

